--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
             </div>
         </section>
        </main>
+       <footer class="footer-container">
+        
+        <p class="footer-text"> © 2022. Todos los derechos reservados</p>
 
+       </footer>
        
 
 </body>
