--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                         <p class="recepie-details-txt">Related dishes:</p>
                         <p class="recepie-details-txt">Category: strong dish</p> 
                             <span class="white-line"></span>
-                        <p style="text-align: left;">Add to my recepies</p>
+                            <button class="add-btn">Add to my recepies</button>
+                            <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
                     </div>
                 </section>
                 <section class="recepie">
@@ -62,8 +63,11 @@
                         <p class="recepie-details-txt">Size: Individual</p>                                             
                         <p class="recepie-details-txt">Price: 50$</p>
                         <p class="recepie-details-txt">Related dishes:</p>
-                        <p class="recepie-details-txt">Category: strong dish</p>  
-
+                        <p class="recepie-details-txt">Category: strong dish</p> 
+                            <span class="white-line"></span>
+                            <button class="add-btn">Add to my recepies</button>
+                            <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
+                    </div>
                     </div>
                 </section>               
             </div>
