featured dishes created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <a href="#"><img class="log-nav" src="imgs/icons/log-out.png" alt="log"></a>
                 <a href="#"><img class="register-nav" src="imgs/icons/register.png" alt="register"></a>
                 <ul class="nav-list">
-                    <li><a class="nav-list-link" href="#">Inicio</a></li>
-                    <li><a class="nav-list-link" href="#">Las mas votadas</a></li>
+                    <li><a class="nav-list-link" href="#">Categors</a></li>
+                    <li><a class="nav-list-link" href="#">Home</a></li>
                     <li><a class="nav-list-link" href="#">Mis recetas</a></li>
                 </ul>
                 
@@ -48,7 +48,7 @@
                         <p class="recepie-details-txt">Related dishes:</p>
                         <p class="recepie-details-txt">Category: strong dish</p> 
                             <span class="white-line"></span>
-                            <button class="add-btn">Add to my recepies</button>
+                            <button class="more-btn">View more</button>
                             <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
                     </div>
                 </section>
@@ -65,7 +65,7 @@
                         <p class="recepie-details-txt">Related dishes:</p>
                         <p class="recepie-details-txt">Category: strong dish</p> 
                             <span class="white-line"></span>
-                            <button class="add-btn">Add to my recepies</button>
+                            <button class="more-btn">View more</button>
                             <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
                     </div>
                     </div>
