title in mobile fixed

--- a/featured.html
+++ b/featured.html
@@ -31,7 +31,7 @@
 
      <main>
         <section class="most-voting-container">
-            <h1 class="voting-title">  Featured dishes  </h1>
+            <h1 class="featured-txt">  Featured dishes  </h1>
             <div class="featured-container">
                 <section class="recepie">
                     
