more changes to details.html

--- a/details.html
+++ b/details.html
@@ -26,15 +26,14 @@
      <section class="det-container">
         <img class="img-details realce" src="imgs/recepies/bibimbap.jpg" alt="logo">
            <div> <h1 class="title-container">Bibimbap</h1>
-            <div class="det-container-text">
-                <p class="text-details">Bibimbap is a traditional Korean dish that
+            <div>
+                <p class=" det-container-text text-details ">Bibimbap is a traditional Korean dish that
                     is made up of white rice and many vegetables,
                     to which protein such as meat and egg is added,
                     as well as spicy sauce. But currently there are
                     many varieties of this complete dish,
                     including vegetarian and vegan versions.</p>
             </div>
-          
             </div>
             </section>
         
@@ -45,11 +44,7 @@
             </div>   
          </section>       
      </section>
-     <section class="most-voting-container">
-        <div class="second-container">
-            <h1 class="text-details-two ">Recommendation</h1> 
-        </div>
-        <div class="voted-recipes-container"> 
+     <section class="most-voting-container"> 
      <section class="recepie">               
         <div>
             <h1 class="featured-title">Bibimbap</h1>
