--- a/details.html
+++ b/details.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;700&family=Open+Sans:ital,wght@0,500;0,700;1,300&family=Raleway:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;700&family=Open+Sans:ital,wght@0,500;0,700;1,300&family=Raleway:ital,wght@0,500;0,700;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <header class="header-container">
         <nav class="top-nav">
-             <a href="#"><img class="logo-nav" src="imgs/icons/logo.png" alt="logo"></a>
-             <a href="#"><img class="log-nav" src="imgs/icons/log-out.png" alt="log"></a>
-             <a href="#"><img class="register-nav" src="imgs/icons/register.png" alt="register"></a>
-             <ul class="nav-list">
-                 <li><a class="nav-list-link" href="#">Categories</a></li>
-                 <li><a class="nav-list-link" href="#">Home</a></li>
-                 <li><a class="nav-list-link" href="#">Featured dishes</a></li>
-             </ul>
+            <a href="#"><img class="logo-nav" src="imgs/icons/logo.png" alt="logo"></a>
+            <a href="#"><img class="log-nav" src="imgs/icons/log-out.png" alt="log"></a>
+            <a href="#"><img class="register-nav" src="imgs/icons/register.png" alt="register"></a>
+            <ul class="nav-list">
+                <li><a class="nav-list-link" href="#">Categories</a></li>
+                <li><a class="nav-list-link" href="#">Home</a></li>
+                <li><a class="nav-list-link" href="#">Featured dishes</a></li>
+            </ul>
         </nav>
-     </header>
-     <div class="line">   </div>
-     <section class="det-container">
+    </header>
+    <div class="line"> </div>
+    <section class="det-container">
         <img class="img-details realce" src="imgs/recepies/bibimbap.jpg" alt="logo">
-           <div> <h1 class="title-container">Bibimbap</h1>
+        <div>
+            <h1 class="title-container">Bibimbap</h1>
             <div>
                 <p class=" det-container-text text-details ">Bibimbap is a traditional Korean dish that
                     is made up of white rice and many vegetables,
@@ -34,54 +39,59 @@
                     many varieties of this complete dish,
                     including vegetarian and vegan versions.</p>
             </div>
-            </div>
+        </div>
+    </section>
+
+    <section class="vote-item">
+        <div>
+            <h2><img class="left space realce" src="imgs/icons/liketwo.png" alt="logo">
+                <img class="right realce" src="imgs/icons/flagtwo.png" alt="logo">
+            </h2>
+        </div>
+    </section>
+    </section>
+    <section class="most-voting-container">
+        <div class="voted-recipes-container">
+            <section class="recepie">
+                <div>
+                    <h1 class="featured-title">Bibimbap</h1>
+                    <img class="featured-img" src="imgs/recepies/bibimbap.jpg" alt="bibimbap">
+                </div>
+                <div class="red-box">
+                    <p class="featured-details-txt">Details</p>
+                    <p class="featured-details-txt">Size: Individual</p>
+                    <p class="featured-details-txt">Price: 50$</p>
+                    <p class="featured-details-txt">Related dishes:</p>
+                    <p class="featured-details-txt">Category: strong dish</p>
+                    <span class="white-line"></span>
+                    <button class="featured-more-btn">View more</button>
+                    <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
+                            alt="like-btn"></button>
+                </div>
             </section>
-        
-        <section class="vote-item">
-            <div>
-                <h2><img class="left space realce" src="imgs/icons/liketwo.png" alt="logo">
-                    <img class="right realce" src="imgs/icons/flagtwo.png" alt="logo"></h2>
-            </div>   
-         </section>       
-     </section>
-     <section class="most-voting-container"> 
-     <section class="recepie">               
-        <div>
-            <h1 class="featured-title">Bibimbap</h1>
-            <img class="featured-img" src="imgs/recepies/bibimbap.jpg" alt="bibimbap">
-        </div>
-        <div class="red-box">                                           
-            <p class="featured-details-txt">Details</p>                                                                                   
-            <p class="featured-details-txt">Size: Individual</p>                                             
-            <p class="featured-details-txt">Price: 50$</p>
-            <p class="featured-details-txt">Related dishes:</p>
-            <p class="featured-details-txt">Category: strong dish</p> 
-                <span class="white-line"></span>
-                <button class="featured-more-btn">View more</button>
-                <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
-        </div>
+            <div class="recepie">
+                <div>
+                    <h1 class="featured-title">Bibimbap</h1>
+                    <img class="featured-img" src="imgs/recepies/bibimbap.jpg" alt="bibimbap">
+                </div>
+                <div class="red-box">
+                    <p class="featured-details-txt">Details</p>
+                    <p class="featured-details-txt">Size: Individual</p>
+                    <p class="featured-details-txt">Price: 50$</p>
+                    <p class="featured-details-txt">Related dishes:</p>
+                    <p class="featured-details-txt">Category: strong dish</p>
+                    <span class="white-line"></span>
+                    <button class="featured-more-btn">View more</button>
+                    <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
+                            alt="like-btn"></button>
+                </div>
+            </div>
     </section>
-    <div class="recepie">
-        <div>
-            <h1 class="featured-title">Bibimbap</h1>
-            <img class="featured-img" src="imgs/recepies/bibimbap.jpg" alt="bibimbap">
-        </div>
-        <div class="red-box">                                           
-            <p class="featured-details-txt">Details</p>                                                                                   
-            <p class="featured-details-txt">Size: Individual</p>                                             
-            <p class="featured-details-txt">Price: 50$</p>
-            <p class="featured-details-txt">Related dishes:</p>
-            <p class="featured-details-txt">Category: strong dish</p> 
-                <span class="white-line"></span>
-                <button class="featured-more-btn">View more</button>
-                <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
-        </div>
-    </div>
     </section>
-</section>
-</main>
-<footer class="footer-container"> 
- <p class="footer-text"> © 2022. Todos los derechos reservados</p>
-</footer>
+    </main>
+    <footer class="footer-container">
+        <p class="footer-text"> © 2022. Todos los derechos reservados</p>
+    </footer>
 </body>
+
 </html>
