fixing nav button

--- a/featured.html
+++ b/featured.html
@@ -30,6 +30,9 @@
      </header>
 
      <main>
+        <div class="line-red">
+            <span></span>
+        </div>
         <section class="most-voting-container">
             <h1 class="featured-txt">  Featured dishes  </h1>
             <div class="featured-container">
