added nav mobile in details

--- a/details.html
+++ b/details.html
@@ -16,6 +16,10 @@
 <body>
     <header class="header-container">
         <nav class="top-nav">
+            <input class="mobile-check" type="checkbox">
+            <label class="mobile-btn">
+                <span></span>
+            </label>
             <a href="#"><img class="logo-nav" src="imgs/icons/logo.png" alt="logo"></a>
             <a href="#"><img class="log-nav" src="imgs/icons/log-out.png" alt="log"></a>
             <a href="#"><img class="register-nav" src="imgs/icons/register.png" alt="register"></a>
