--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
         <div>
             <h1 class="title-container">Bibimbap</h1>
             <div>
-                <p class=" det-container-text text-details ">Bibimbap is a traditional Korean dish that
+                <p class="text-details ">Bibimbap is a traditional Korean dish that
                     is made up of white rice and many vegetables,
                     to which protein such as meat and egg is added,
                     as well as spicy sauce. But currently there are
