add details caract

--- a/details.html
+++ b/details.html
@@ -35,7 +35,7 @@
         <img class="img-details realce" src="imgs/recepies/bibimbap.jpg" alt="logo">
         <div>
             <h1 class="title-container">Bibimbap</h1>
-            <div>
+            <div class="second-container">
                 <p class="text-details ">Bibimbap is a traditional Korean dish that
                     is made up of white rice and many vegetables,
                     to which protein such as meat and egg is added,
@@ -48,9 +48,8 @@
 
     <section class="vote-item">
         <div>
-            <h2><img class="left space realce" src="imgs/icons/liketwo.png" alt="logo">
-                <img class="right realce" src="imgs/icons/flagtwo.png" alt="logo">
-            </h2>
+            <a href="#"><img class="left space realce" src="imgs/icons/liketwo.png"alt="log"></a>
+            <a href="#"><img class="right realce"   src="imgs/icons/flagtwo.png" alt="logo"></a>
         </div>
     </section>
     </section>
