--- a/details.html
+++ b/details.html
@@ -12,7 +12,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-
 <body>
     <header class="header-container">
         <nav class="top-nav">
@@ -30,6 +29,7 @@
             </ul>
         </nav>
     </header>
+    <main>
     <div class="line"> </div>
     <section class="det-container">
         <img class="img-details realce" src="imgs/recepies/bibimbap.jpg" alt="logo">
@@ -45,7 +45,6 @@
             </div>
         </div>
     </section>
-
     <section class="vote-item">
         <div>
             <a href="#"><img class="left space realce" src="imgs/icons/liketwo.png"alt="log"></a>
@@ -91,10 +90,10 @@
             </div>
     </section>
     </section>
-    </main>
     <footer class="footer-container">
         <p class="footer-text"> © 2022. Todos los derechos reservados</p>
     </footer>
+    </main>
 </body>
 
 </html>
