added links to view more

--- a/details.html
+++ b/details.html
@@ -65,7 +65,7 @@
                     <p class="featured-details-txt">Related dishes:</p>
                     <p class="featured-details-txt">Category: strong dish</p>
                     <span class="white-line"></span>
-                    <button class="featured-more-btn">View more</button>
+                    <a href="details.html"><button class="featured-more-btn">View more</button></a>
                     <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                             alt="like-btn"></button>
                 </div>
@@ -82,7 +82,7 @@
                     <p class="featured-details-txt">Related dishes:</p>
                     <p class="featured-details-txt">Category: strong dish</p>
                     <span class="white-line"></span>
-                    <button class="featured-more-btn">View more</button>
+                    <a href="details.html"><button class="featured-more-btn">View more</button></a>
                     <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                             alt="like-btn"></button>
                 </div>
