--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                         <p class="recepie-details-txt">Related dishes:</p>
                         <p class="recepie-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -74,7 +74,7 @@
                         <p class="recepie-details-txt">Related dishes:</p>
                         <p class="recepie-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -98,7 +98,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -118,7 +118,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -138,7 +138,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -158,7 +158,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -178,7 +178,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -198,7 +198,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -218,7 +218,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -238,7 +238,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -258,7 +258,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <button class="featured-more-btn">View more</button>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
