--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <a href="details.html"><button class="featured-more-btn">View more</button></a>>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
@@ -138,7 +138,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p>
                         <span class="white-line"></span>
-                        <a href="details.html"><button class="featured-more-btn">View more</button></a>>
+                        <a href="details.html"><button class="featured-more-btn">View more</button></a>
                         <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png"
                                 alt="like-btn"></button>
                     </div>
