--- a/featured.html
+++ b/featured.html
@@ -126,7 +126,7 @@
                         <p class="featured-details-txt">Related dishes:</p>
                         <p class="featured-details-txt">Category: strong dish</p> 
                             <span class="white-line"></span>
-                            <a href="details.html"><button class="featured-more-btn">View more</button></a>on>
+                            <a href="details.html"><button class="featured-more-btn">View more</button></a>
                             <button class="featured-like-btn"> <img class="like-img" src="imgs/icons/heart.png" alt="like-btn"></button>
                     </div>
                 </section>
